--- a/Google.Maps/source/Google.Maps/Google.Maps.csproj
+++ b/Google.Maps/source/Google.Maps/Google.Maps.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
