--- a/Google.Maps/samples/GoogleMapsSample/GoogleMapsSample/Info.plist
+++ b/Google.Maps/samples/GoogleMapsSample/GoogleMapsSample/Info.plist
@@ -21,13 +21,15 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>7.0</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>googlechromes</string>
 		<string>comgooglemaps</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.googlemapssample</string>
+	<string>com.xamarin.google.mapssample</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Trying to locate Xamarin HQ</string>
 </dict>
 </plist>
