[firebase][analytics] Updated to version 3.4.2

--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
@@ -14,7 +14,7 @@
 	<Target Name="_FirebaseInstanceIDItems">
 
 		<PropertyGroup>
-			<_FirebaseInstanceIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInstanceIDItemsFolder)\Frameworks\</_FirebaseInstanceIDSDKBaseFolder>
+			<_FirebaseInstanceIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInstanceIDItemsFolder)\Frameworks\frameworks\</_FirebaseInstanceIDSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
