[firebase][invites] Updated to version 1.2.1 - Updated docs - Added a missing key in Info.plist to give app access to Contacts so iOS 10 won't kill the app

--- a/Firebase.Invites/samples/InvitesSample/InvitesSample/Info.plist
+++ b/Firebase.Invites/samples/InvitesSample/InvitesSample/Info.plist
@@ -43,5 +43,7 @@
 			<string>Editor</string>
 		</dict>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>Allow the app to access to your contacts.</string>
 </dict>
 </plist>
