--- a/Google.InstanceID/samples/InstanceIDSample/InstanceIDSample/InstanceIDSample.csproj
+++ b/Google.InstanceID/samples/InstanceIDSample/InstanceIDSample/InstanceIDSample.csproj
@@ -98,6 +98,8 @@
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Google.Core\source\Google.Core\Google.Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.InstanceID\Google.InstanceID.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.targets')" />
@@ -110,6 +112,14 @@
     <ProjectReference Include="..\..\..\source\Google.InstanceID\Google.InstanceID.csproj">
       <Project>{A7EE4C2C-808D-4D91-A43D-45400989F79A}</Project>
       <Name>Google.InstanceID</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
+      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
+      <Name>Firebase.Analytics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
+      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
+      <Name>Firebase.InstanceID</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
