--- a/Google.InstanceID/source/Google.InstanceID/Google.InstanceID.csproj
+++ b/Google.InstanceID/source/Google.InstanceID/Google.InstanceID.csproj
@@ -60,6 +60,14 @@
       <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
       <Name>Google.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
+      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
+      <Name>Firebase.Analytics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
+      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
+      <Name>Firebase.InstanceID</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Google.InstanceID.targets" />
