--- a/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
+++ b/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
@@ -9,7 +9,7 @@
 
 	<ItemGroup Condition="'$(OutputType)'!='Library'">
 		<XamarinBuildDownload Include="$(_FirebaseAuthItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/784b9c2c91db1063/FirebaseAnalytics-3.4.3.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/8e158ec1f7a46595/FirebaseAuth-3.0.5.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleNetworkingUtilitiesItemsFolder)">
@@ -31,11 +31,11 @@
 				<LogicalName>FirebaseAuth</LogicalName>
 				<AssemblyName>$(_FirebaseAuthAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-		</ItemGroup>
-		<RestoreAssemblyResource Include="$(_GoogleNetworkingUtilitiesSDKBaseFolder)GoogleNetworkingUtilities.framework\GoogleNetworkingUtilities">
+			<RestoreAssemblyResource Include="$(_GoogleNetworkingUtilitiesSDKBaseFolder)GoogleNetworkingUtilities.framework\GoogleNetworkingUtilities">
 				<LogicalName>GoogleNetworkingUtilities</LogicalName>
 				<AssemblyName>$(_FirebaseAuthAssemblyName)</AssemblyName>
-		</RestoreAssemblyResource>
+			</RestoreAssemblyResource>
+		</ItemGroup>
 		
 	</Target>
 </Project>
