--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
@@ -3,27 +3,27 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-3.4.3</_FirebaseAnalyticsItemsFolder>
-		<_GoogleSymbolUtilitiesItemsFolder>GSymblU-1.1.2</_GoogleSymbolUtilitiesItemsFolder>
-		<_GoogleUtilitiesItemsFolder>GUtlts-1.3.2</_GoogleUtilitiesItemsFolder>
-		<_GoogleInterchangeUtilitiesItemsFolder>GIntrchngU-1.2.2</_GoogleInterchangeUtilitiesItemsFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-3.4.2</_FirebaseAnalyticsItemsFolder>
+		<_GoogleSymbolUtilitiesItemsFolder>GSymblU-1.1.1</_GoogleSymbolUtilitiesItemsFolder>
+		<_GoogleUtilitiesItemsFolder>GUtlts-1.3.1</_GoogleUtilitiesItemsFolder>
+		<_GoogleInterchangeUtilitiesItemsFolder>GIntrchngU-1.2.1</_GoogleInterchangeUtilitiesItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/784b9c2c91db1063/FirebaseAnalytics-3.4.3.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/0b602bd07626bdbe/FirebaseAnalytics-3.4.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/dbffca986f6337f8-GoogleSymbolUtilities-1.1.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/978f81964b50a7c0/GoogleUtilities-1.3.2.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/732a619a9bd45fa5-GoogleUtilities-1.3.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleInterchangeUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/1a7f7ba905b2c029/GoogleInterchangeUtilities-1.2.2.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/0d17b56f78556d27-GoogleInterchangeUtilities-1.2.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseAnalyticsItems"/>
@@ -33,9 +33,9 @@
 
 		<PropertyGroup>
 			<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\Frameworks\frameworks\</_FirebaseAnalyticsSDKBaseFolder>
-			<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
-			<_GoogleUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleUtilitiesSDKBaseFolder>
-			<_GoogleInterchangeUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleInterchangeUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleInterchangeUtilitiesSDKBaseFolder>
+			<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
+			<_GoogleUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUtilitiesItemsFolder)\Frameworks\</_GoogleUtilitiesSDKBaseFolder>
+			<_GoogleInterchangeUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleInterchangeUtilitiesItemsFolder)\Frameworks\</_GoogleInterchangeUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
