--- a/Firebase.CloudMessaging/nuget/Xamarin.Firebase.iOS.CloudMessaging.nuspec
+++ b/Firebase.CloudMessaging/nuget/Xamarin.Firebase.iOS.CloudMessaging.nuspec
@@ -9,8 +9,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Cloud Messaging iOS Library</description>
     <copyright>Copyright 2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleiosgcm</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleiosgcm</licenseUrl>
+    <projectUrl>https://components.xamarin.com/view/firebaseioscloudmessaging</projectUrl>
+    <licenseUrl>https://components.xamarin.com/license/firebaseioscloudmessaging</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseioscloudmessaging_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
