--- a/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
+++ b/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
@@ -3,12 +3,12 @@
   <metadata>
     <id>Xamarin.Google.iOS.Analytics</id>
     <title>Google APIs Analytics iOS Library</title>
-    <version>3.14.0.8</version>
+    <version>3.17.0.0</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Analytics iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosanalytics</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosanalytics</licenseUrl>
     <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
