Fixing the component packages
Sample files were missing references to NuGets

--- a/Firebase.AdMob/component/component.yaml
+++ b/Firebase.AdMob/component/component.yaml
@@ -25,6 +25,9 @@ samples:
       - project: AdMobSample
         packages:
           - Xamarin.Firebase.iOS.AdMob
+          - Xamarin.Google.iOS.MobileAds
+          - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.InstanceID
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Google.MobileAds.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
