--- a/Firebase.DynamicLinks/component/component.yaml
+++ b/Firebase.DynamicLinks/component/component.yaml
@@ -29,6 +29,8 @@ samples:
       - project: DynamicLinksSample
         packages:
           - Xamarin.Firebase.iOS.DynamicLinks
+          - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.InstanceID
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.DynamicLinks.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
