--- a/Firebase.Auth/samples/AuthSample/AuthSample/packages.config
+++ b/Firebase.Auth/samples/AuthSample/AuthSample/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Xamarin.Build.Download" version="0.2.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Facebook.iOS" version="4.16.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.Analytics" version="3.4.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8" targetFramework="xamarinios10" />
+  <package id="Xamarin.Google.iOS.Core" version="3.0.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Google.iOS.SignIn" version="4.0.0" targetFramework="xamarinios10" />
 </packages>
