--- a/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
+++ b/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
@@ -4,7 +4,7 @@
 	<PropertyGroup>
 		<_FirebaseAuthAssemblyName>Firebase.Auth, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAuthAssemblyName>
 		<_FirebaseAuthItemsFolder>FAth-3.0.5</_FirebaseAuthItemsFolder>
-		<_GoogleNetworkingUtilitiesItemsFolder>GNtwrkngU-1.2.2</_GoogleNetworkingUtilitiesItemsFolder>
+		<_GoogleNetworkingUtilitiesItemsFolder>GNtwrkngU-1.2.1</_GoogleNetworkingUtilitiesItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(OutputType)'!='Library'">
@@ -13,7 +13,7 @@
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleNetworkingUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/54fd7b7ef8fd3edc/GoogleNetworkingUtilities-1.2.2.tar.gz</Url>
+			<Url>https://www.gstatic.com/cpdc/9a35b867a7ad8af0-GoogleNetworkingUtilities-1.2.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseAuthItems"/>
@@ -23,7 +23,7 @@
 
 		<PropertyGroup>
 			<_FirebaseAuthSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAuthItemsFolder)\Frameworks\frameworks\</_FirebaseAuthSDKBaseFolder>
-			<_GoogleNetworkingUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleNetworkingUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleNetworkingUtilitiesSDKBaseFolder>
+			<_GoogleNetworkingUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleNetworkingUtilitiesItemsFolder)\Frameworks\</_GoogleNetworkingUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
