--- a/Firebase.RemoteConfig/component/component.yaml
+++ b/Firebase.RemoteConfig/component/component.yaml
@@ -31,6 +31,8 @@ samples:
       - project: RemoteConfigSample
         packages:
           - Xamarin.Firebase.iOS.RemoteConfig
+          - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.InstanceID
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.RemoteConfig.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
