--- a/Google.SignIn/samples/SignInExample/SignInExample/SignInExample.csproj
+++ b/Google.SignIn/samples/SignInExample/SignInExample/SignInExample.csproj
@@ -64,7 +64,7 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <MtouchExtraArgs>-v -v -v</MtouchExtraArgs>
-    <MtouchFastDev>true</MtouchFastDev>
+    <MtouchFastDev>false</MtouchFastDev>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
