--- a/Google.SignIn/externals/Makefile
+++ b/Google.SignIn/externals/Makefile
@@ -1,23 +1,13 @@
 
-VERSION=4_0_1
-SDK_FOLDER=google_signin_sdk_$(VERSION)
+POD=pod
 
-all: GoogleSignIn GoogleSignIn.bundle
+all: Podfile.lock
 
-GoogleSignIn:
-	curl -O https://developers.google.com/identity/sign-in/ios/sdk/google_signin_sdk_$(VERSION).zip
-	unzip -p $(SDK_FOLDER).zip '$(SDK_FOLDER)/GoogleSignIn.framework/GoogleSignIn' > GoogleSignIn
-	unzip -p $(SDK_FOLDER).zip '$(SDK_FOLDER)/GoogleSignInDependencies.framework/GoogleSignInDependencies' > GoogleSignInDependencies
-	unzip -p $(SDK_FOLDER).zip '$(SDK_FOLDER)/GoogleAppUtilities.framework/GoogleAppUtilities' > GoogleAppUtilities
-
-GoogleSignIn.bundle:
-	unzip $(SDK_FOLDER).zip '$(SDK_FOLDER)/GoogleSignIn.bundle/*' -d ./
-	mv $(SDK_FOLDER)/GoogleSignIn.bundle/ ./
-	rm -rf $(SDK_FOLDER)
-	rm $(SDK_FOLDER).zip
+Podfile.lock :
+	$(POD) install
 
 clean:
-	rm -rf [Gg]oogle* Resources/
+	rm -rf Podfile.lock Pods
 
 .PHONY: all clean
 
