[firebase][core] Added Core component - Added to manifest - Added binding version 3.4.4 - Added icons - Added license - Added externals - Added nuspec - Added build.cake

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -14,6 +14,10 @@
   BuildScript: ./Firebase.CloudMessaging/build.cake
   TriggerPaths: [ Firebase.CloudMessaging ]
   MacBuildTargets: [ samples, component ]
+- Name: Firebase.iOS.Core
+  BuildScript: ./Firebase.Core/build.cake
+  TriggerPaths: [ Firebase.Core ]
+  MacBuildTargets: [ samples, component ]
 - Name: Firebase.iOS.Database
   BuildScript: ./Firebase.Database/build.cake
   TriggerPaths: [ Firebase.Database ]
