--- a/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
+++ b/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Xamarin.Firebase.iOS.Analytics</id>
     <title>Firebase APIs Analytics iOS Library</title>
-    <version>3.4.2.0</version>
+    <version>3.5.1.0</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -15,6 +15,7 @@
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
       <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.0"/>
+      <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.4.0"/>
     </dependencies>
   </metadata>
   <files>
